--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -56,11 +56,7 @@
 
 - name: Template misc mariadb config files
   template: src="{{item.src}}" dest="{{item.dest}}" owner="{{item.owner|default('root')}}" group="{{item.group|default('root')}}" mode="{{item.mode|default('0600')}}"
-  with_items:
-    - { src: "ssl.cnf.j2", dest: "{{mariadb_conf_dir}}/ssl", mode: "0644" }
-    - { src: "tuning.cnf.j2", dest: "{{mariadb_conf_dir}}/tuning.cnf", mode: "0644" }
-    - { src: "mariadb@.service", dest: "/etc/systemd/system/mariadb@.service" }
-    - { src: "nrpe-mariadb.cfg.j2", dest: "/etc/nrpe.d/role-mariadb.cfg", owner: "nrpe", group: "nrpe", mode: "0440" }
+  with_items: "{{ mariadb_misc_config_files | from_yaml }}"
   tags:
     - ssl_cnf
     - mysql-tuning
