--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -58,6 +58,8 @@
   register: misc_config_changed
 
 - name: configuration has changed
+  shell: echo register variable
+  changed_when: false
   register: mysql_config_changed
   when: file_custom_vars_changed.changed or file_mysql_config_changed.changed or
         file_mysqldump_config_changed.changed or file_mysqld_config_changed.changed or
@@ -151,32 +153,46 @@
     - selinux
     - sepermissive
 
+- name: Check if MariaDB is running
+  shell: ps aux | grep mysql | grep -v grep
+  ignore_errors: yes
+  changed_when: false
+  register: service_mysql_status
+
 - name: get database quorum size ( (cluster number of incoming addresses / 2) +1 )
   shell: "echo $((($(mysql <<< \"SHOW STATUS LIKE 'wsrep_incoming_addresses';\" | awk '{print $2}' | tail -n 1 | sed \"s/,/ /\"g |wc -w)/2)+1))"
   args: 
     executable: /bin/bash
   register: galera_quorum_size
+  changed_when: false
+  when: service_mysql_status.rc != 0
 
 - name: get database cluster status for this node
   shell: "mysql <<< \"SHOW STATUS LIKE 'wsrep_cluster_status';\" | awk '{print $2}'| tail -n 1"
   args: 
     executable: /bin/bash
   register: galera_wsrep_cluster_status
+  changed_when: false
+  when: service_mysql_status.rc != 0
 
 - name: get database cluster size for this node
   shell: "mysql <<< \"SHOW STATUS LIKE 'wsrep_cluster_size';\" | awk '{print $2}'| tail -n 1"
   args: 
     executable: /bin/bash
   register: galera_wsrep_cluster_size
+  changed_when: false
+  when: service_mysql_status.rc != 0
 
 - debug:
     msg: galera_wsrep_cluster_status={{ galera_wsrep_cluster_status }} galera_wsrep_cluster_size={{ galera_wsrep_cluster_size }}
   when: debug is defined and (debug|bool)
+        and service_mysql_status.rc == 0
 
 - name: stop mariadb if config changed (warning! this can take from one second to several hours according to your cluster)
   service: name=mariadb state=stopped
   when: mysql_config_changed.changed and
         galera_wsrep_cluster_status.stdout|lower == "primary" and galera_wsrep_cluster_size.stdout|int > galera_quorum_size.stdout|int
+        and service_mysql_status.rc == 0
 
 - name: test if first node does normal start
   service:  name=mariadb state=started
