--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -59,7 +59,6 @@
 
 - name: configuration has changed
   shell: echo register variable
-  changed_when: false
   register: mysql_config_changed
   when: file_custom_vars_changed.changed or file_mysql_config_changed.changed or
         file_mysqldump_config_changed.changed or file_mysqld_config_changed.changed or
@@ -188,9 +187,14 @@
   when: debug is defined and (debug|bool)
         and service_mysql_status.rc == 0
 
+- debug:
+    msg: galera_wsrep_cluster_status={{ galera_wsrep_cluster_status }} galera_wsrep_cluster_size={{ galera_wsrep_cluster_size }} galera_quorum_size={{ galera_quorum_size }}
+  when: debug is defined and (debug|bool)
+
 - name: stop mariadb if config changed (warning! this can take from one second to several hours according to your cluster)
   service: name=mariadb state=stopped
   when: mysql_config_changed.changed and
+        not galera_wsrep_cluster_status.skipped and not galera_wsrep_cluster_size.skipped and not galera_quorum_size.skipped and
         galera_wsrep_cluster_status.stdout|lower == "primary" and galera_wsrep_cluster_size.stdout|int > galera_quorum_size.stdout|int
         and service_mysql_status.rc == 0
 
