--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,6 +26,20 @@
 - name: Flush handlers
   meta: flush_handlers
 
+- name: delete mysql default location if exists
+  file:
+    path: {{ mysql_std_path }}
+    state: absent
+  failed_when: False
+  when: mysql_mount is defined and mysql_mount|is_mount and not mysql_std_path|is_link
+
+- name: create symlink to mountpoint
+  file:
+    src: "{{ mysql_mount }}/mysql"
+    dest: "{{ mysql_std_path }}"
+    state: link
+  when: mysql_std_path is defined and mysql_std_path|is_mount
+
 - name: Install MariaDB Server (debian/ubuntu)
   apt: name={{item}} state=present
   with_items: "{{ mariadb_apt_packages | from_yaml }}"
